kubernetes/legacy/apps/stirling-pdf-lite/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stirling-pdf-lite
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "stirling-pdf-lite.k8s.local"
  rules:
    - backendRefs:
        - name: stirling-pdf-lite
          port: 8080
